=== HEAD

* Don't include primary key indexes when parsing MSSQL indexes on JDBC (jeremyevans)

* Make Dataset#insert_select return nil on PostgreSQL if disable_insert_returning is used (jeremyevans)

* Speed up execution of prepared statements with bound variables on MySQL (ibc@aliax.net)
 
* Add association_dependencies plugin, for deleting, destroying, or nullifying associated objects when destroying a model object (jeremyevans)

* Add :validate association option, set to false to not validate when implicitly saving associated objects (jeremyevans)

* Add subclasses plugin, for recording all of a models subclasses and descendent classes (jeremyevans)

* Add looser_typecasting extension, for using .to_f and .to_i instead of Kernel.Float and Kernel.Integer when typecasting floats and integers (jeremyevans)

* Catch database errors when preparing statements or setting variable values when using the native MySQL adapter (jeremyevans)

* Add typecast_on_load plugin, for fixing bad database typecasting when loading model objects (jeremyevans)

* Detect more types of MySQL disconnection errors (jeremyevans)

* Add Sequel.convert_exception_class for wrapping exceptions (jeremyevans)

* Model#modified? now always considers new records as modified (jeremyevans)

* Typecast before checking current model attribute value, instead of after (jeremyevans)

* Don't attempt to use unparseable defaults as literals when dumping the schema for a MySQL database (jeremyevans)

* Handle MySQL enum defaults in the schema dumper (jeremyevans)

* Support Database#server_version on MSSQL (dlee, jeremyevans)

* Support updating and deleting joined datasets on MSSQL (jfirebaugh)

* Support the OUTPUT SQL clause on MSSQL delete, insert, and update statements (jfirebaugh)

* Refactor generation of delete, insert, select, and update statements (jfirebaugh, jeremyevans)

* Do a better job of parsing defaults on MSSQL (jfirebaugh)

=== 3.4.0 (2009-09-02)
